CSS Updates and stop/restart on page visibility change

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,10 +104,44 @@ body {
     font-weight: bold;
 }
 
-/* Area where the video is displayed */
+/* Contains the nav-bar and video display div */
 #main-window {
     display: none;
     text-align: center;
+    flex-direction: column;
+    height: 100%;
+}
+
+/* The navigation bar in the main window above the video feed */
+#nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+}
+
+/* Display in the middle of the nav bar */
+#middle-text {
+    flex-grow: 1;
+    text-align: center;
+}
+
+/* Div that holds the video image */
+#video-container {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+/* Expand the video image to 100% */
+#video-container img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 /* Window asking for the initial password when the software is first booted */
@@ -134,7 +168,6 @@ body {
     height: 24px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
     left: 20px;
 }
 
@@ -142,7 +175,7 @@ body {
 .bar {
     width: 100%;
     height: 4px;
-    background-color: #333;
+    background-color: #ffffff;
     border-radius: 2px;
 }
 
@@ -167,4 +200,9 @@ body {
 
 .password-field {
     width: 200px;
+}
+
+#user-list-table {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
